Version 0.9.3
Add LiveJournal plugin
Add Greek translation
Jabber: fix send rich-text messages
ICQ: Fix set birthday flag
Fix apply custom fonts
Fix communication-problem with AIM-Screennames > 13 chars
Fix not receive AuthGrant from some ICQ-users
Proxy: add support listen sockets for SOCKS4 and SOCKS5
Add Yahoo! plugin
MSN: Fix remove contact

Version 0.9.2
Add styles plugin
Add customizable history styles
ICQ: Fix receive messages from icq2003b
Jabber: Add disco request for search agents
Add history size config
Add remote control plugin
Add spell checking
Jabber: Add jabber browser/disco
Fix bind socket for direct connection
Fix save history on win32
Add option "Ignore this phrase" in context menu
Jabber: Fix send multiline message
Jabber: Add configure to jabber browser
Jabber: Add headline support
ICQ: Change check invisible method
ICQ: Remove check invisible
Add action plugin - for call external programs
Add zodiak plugin

Version 0.9.1
ICQ: Fix login
Add GPG plugin
Fix HTTPS proxy auth
Add Hungarian translation

Version 0.9
Rewrite code, make plugin-based structure
Add MSN & Jabber protocols
Add metacontact support
ICQ: Add typing notification
ICQ: Add support users picture
ICQ: Add check invisible
Add Miranda emoticons support
ICQ: Add support AIM buddies
ICQ: Fix send to occupied and dnd mode
MSN: Upgrade protocol to V8
Add quick search in contact list
MacOS X compile
Add AIM protocol
Jabber: Add rich-text support
Jabber: Add typing notification
ICQ: File transfer and reverse direct connections support
MSN: File transfer support
ICQ: Fix protocol for bigendian
Jabber: File transfer support
Jabber: Picture in vCard support
Jabber: Send & receive contacts list
AIM: Send & receive contacts list
Add Portuguese translation

Version 0.8.2
Add Bulgarian translation
Add Hebrew translation
Add random chat
Add settings for groups
Add GKrellM2 plugin
Add French translation

Version 0.8.1
Add option for using simple/double click
Add background picture for mainwindow