@@ -17,6 +17,10 @@
 
 #include "replace.h"
 #include "replacecfg.h"
+#include "textshow.h"
+#include "html.h"
+
+#include <qapplication.h>
 
 Plugin *createReplacePlugin(unsigned base, bool, const char *cfg)
 {
@@ -40,7 +44,7 @@ EXPORT_PROC PluginInfo* GetPluginInfo()
 
 static DataDef replaceData[] =
     {
-        { "Keys", DATA_UTFLIST, 1, 0 },
+        { "Keys", DATA_ULONG, 1, 0 },
         { "Key", DATA_UTFLIST, 1, 0 },
         { "Value", DATA_UTFLIST, 1, 0 },
         { NULL, 0, 0, 0 }
@@ -50,6 +54,7 @@ ReplacePlugin::ReplacePlugin(unsigned base, const char *cfg)
         : Plugin(base)
 {
     load_data(replaceData, &data, cfg);
+	qApp->installEventFilter(this);
 }
 
 ReplacePlugin::~ReplacePlugin()
@@ -65,6 +70,70 @@ string ReplacePlugin::getConfig()
 QWidget *ReplacePlugin::createConfigWindow(QWidget *parent)
 {
     return new ReplaceCfg(parent, this);
+}
+
+class UnquoteParser : public HTMLParser
+{
+public:
+	UnquoteParser(const QString &text);
+	QString m_text;
+protected:
+    virtual void text(const QString &text);
+    virtual void tag_start(const QString &tag, const list<QString> &options);
+    virtual void tag_end(const QString &tag);
+};
+
+UnquoteParser::UnquoteParser(const QString &text)
+{
+	parse(text);
+}
+
+void UnquoteParser::text(const QString &text)
+{
+	m_text += text;
+}
+
+void UnquoteParser::tag_start(const QString &tag, const list<QString>&)
+{
+	if (tag == "img")
+		m_text += " ";
+	if (tag == "br")
+		m_text += "\n";
+}
+
+void UnquoteParser::tag_end(const QString&)
+{
+}
+
+bool ReplacePlugin::eventFilter(QObject *o, QEvent *e)
+{
+	if ((e->type() == QEvent::KeyPress) && o->inherits("MsgTextEdit")){
+		QKeyEvent *ke = (QKeyEvent*)e;
+		if ((ke->key() == Key_Enter) || (ke->key() == Key_Return) || (ke->key() == Key_Space)){
+			TextEdit *edit = (TextEdit*)o;
+			int paraFrom, paraTo, indexFrom, indexTo;
+			edit->getSelection(&paraFrom, &indexFrom, &paraTo, &indexTo);
+			if ((paraFrom == paraTo) && (indexFrom == indexTo)){
+				int parag, index;
+			    edit->getCursorPosition(&parag, &index);
+				UnquoteParser p(edit->text(parag));
+				QString text = p.m_text.left(index);
+				for (unsigned i = 0; i < getKeys(); i++){
+					QString key = getKey(i);
+					if (key.length() > text.length())
+						continue;
+					if (key != text.mid(text.length() - key.length()))
+						continue;
+					if ((key.length() < text.length()) && !text[(int)(text.length() - key.length() - 1)].isSpace())
+						continue;
+					edit->setSelection(parag, index - key.length(), parag, index);
+					edit->insert(getValue(i), false, false);
+					break;
+				}
+			}
+		}
+	}
+	return QObject::eventFilter(o, e);
 }
 
 #ifdef WIN32
