@@ -21,6 +21,9 @@
 #include "replacecfgbase.h"
 
 class ReplacePlugin;
+class IntLineEdit;
+class QFrame;
+class QListViewItem;
 
 class ReplaceCfg : public ReplaceCfgBase
 {
@@ -30,9 +33,18 @@ public:
     virtual ~ReplaceCfg();
 public slots:
     void apply();
+	void selectionChanged();
+	void sizeChange(int,int,int);
+	void mouseButtonPressed(int, QListViewItem*, const QPoint&, int);
 protected:
+	IntLineEdit   *m_edit;
+	unsigned	  m_col;
     void resizeEvent(QResizeEvent *e);
     ReplacePlugin *m_plugin;
+	QListViewItem *m_editItem;
+	unsigned	  m_editCol;
+	unsigned	  m_count;
+	void		  setEdit();
 };
 
 #endif
