@@ -12,7 +12,8 @@ libsimui_la_SOURCES = \
  fontedit.cpp \
  listview.cpp \
  toolbtn.cpp \
- datepicker.cpp 
+ datepicker.cpp \
+ intedit.cpp 
 
 libsimui_la_LIBADD = $(LIBUIQT) ../api/libsimapi.la $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(EXTRA_LIBS) $(LIBLD)
 
