@@ -20,6 +20,7 @@
 #include <qpopupmenu.h>
 #include <qtimer.h>
 #include <qapplication.h>
+#include <qheader.h>
 
 bool ListView::s_bInit = false;
 
@@ -49,9 +50,17 @@ ListView::ListView(QWidget *parent, const char *name)
     m_pressedItem = NULL;
     m_expandingColumn = -1;
     verticalScrollBar()->installEventFilter(this);
+	connect(header(), SIGNAL(sizeChange(int,int,int)), this, SLOT(sizeChange(int,int,int)));
 }
+
 ListView::~ListView()
-{}
+{
+}
+
+void ListView::sizeChange(int,int,int)
+{
+	QTimer::singleShot(0, this, SLOT(adjustColumn()));
+}
 
 ProcessMenuParam *ListView::getMenu(QListViewItem *item)
 {
