@@ -9,6 +9,7 @@ Fix not receive AuthGrant from some ICQ-users
 Proxy: add support listen sockets for SOCKS4 and SOCKS5
 Add Yahoo! plugin
 MSN: Fix remove contact
+Add replace text plugin
 
 Version 0.9.2
 Add styles plugin
